fix spacing

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -133,7 +133,7 @@ a {
   flex-direction: column;
   align-items: center;
   margin: auto;
-  padding: 5rem 0;
+  padding-top: 5rem;
   max-width: 540px;
   text-align: center;
 }
